# makedoc

./: README.md  Runner.hs  makedoc.cabal
example/: document.bib  document.md  template.tex
src/: Conversion.hs  Main.hs  Runner.hs
