name:                makedoc
version:             0.1.0.0
synopsis:            A Markdown converter to PDF or Docx
description:         Makedoc converts Markdown files to PDF or Docx,
                     using Pandoc and LaTeX
homepage:            https://github.com/ogoid/makedoc
license:             GPL-2
license-file:        LICENSE
author:              Diogo Ramos
maintainer:          somar.ogoid@hotmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable makedoc
  main-is:             Main.hs
  other-modules:       Conversion, Runner
  build-depends:       base >=4.8 && <4.9
                     , filepath, directory, process, bytestring
                     , pandoc>=1.14
                     , pandoc-types, pandoc-citeproc
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            git://github.com/ogoid/makedoc.git
